--- a/cadastro_aluno.html
+++ b/cadastro_aluno.html
@@ -13,10 +13,10 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 header_area">
                     <div class="row">
-                        <div class="col-sm-12 col-md-12 col-lg-3">
+                        <div class="col-sm-12 col-md-3 col-lg-3">
                             <a href="index.html"><img src="img/logo-placeholder.png" class="logo"></a>
                         </div>
-                        <div class="col-sm-12 col-md-12 col-lg-9">
+                        <div class="col-sm-12 col-md-9 col-lg-9">
                             <nav class="nav">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 <a class="nav-link" href="#">Avaliações</a>
@@ -73,7 +73,7 @@
             </div>
         </main>
 
-        <footer class="footer" style="position: fixed;">
+        <footer class="footer_cadastro">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 footer_area">
                     <div class="row">
