--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <nav class="nav">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 <a class="nav-link" href="index_aluno.html">Aluno</a>
-                                <a class="nav-link" href="#">Professor</a>
+                                <a class="nav-link" href="index_aluno.html">Professor</a>
                                 <a class="nav-link" href="#">Avaliações</a>
                             </nav>
                         </div>
@@ -42,7 +42,7 @@
                             <h1>Conhecimento na <br>palma da mão</h1>
                             <br><br>
                             <h3>This is the best app for <br>people with apps.</h3><br><br><br>
-                            <a href="cadastro_aluno.html"><button>Cadastro Aluno</button></a><a href="#"><button>Cadastro Professor</button></a>
+                            <a href="cadastro_aluno.html"><button>Cadastro Aluno</button></a><a href=""><button>Cadastro Professor</button></a>
                         </div>
                     </div>
                 </div>
