--- a/cadastro_professor.html
+++ b/cadastro_professor.html
@@ -13,14 +13,12 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 header_area">
                     <div class="row">
-                        <div class="col-sm-12 col-md-12 col-lg-3">
-                            <img src="img/logo-placeholder.png" class="logo">
+                        <div class="col-sm-12 col-md-3 col-lg-3">
+                            <a href="index.html"><img src="img/logo-placeholder.png" class="logo"></a>
                         </div>
-                        <div class="col-sm-12 col-md-12 col-lg-9">
+                        <div class="col-sm-12 col-md-9 col-lg-9">
                             <nav class="nav">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                <a class="nav-link" href="cadastro_aluno.html">Lançamentos</a>
-                                <a class="nav-link" href="cadastro_professor.html">Em Destaque</a>
                                 <a class="nav-link" href="#">Avaliações</a>
                             </nav>
                         </div>
@@ -30,33 +28,52 @@
         </header>
 
         <!- -!>
-        <div class="col-lg-12">
+        <div class="col-sm-12 col-md-12 col-lg-12 cadastro_area">
             <div class="row">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-6">
+                <div class="col-md-3 col-lg-5"></div>
+                <div class="col-sm-12 col-md-6 col-lg-2">
                     <div class="row">
-                        <h3>Criar Conta de Professor</h3>
-                        <div class="col-lg-6">
-                            <p>Nome Completo<br><input type="text" placeholder="Fulano"></p>
-                            <p>Email<br><input type="text" placeholder="Fulano"></p>
+                        <h3  style="padding-bottom: 15px;">Criar Conta de Professor</h3>
+                        <p>Nome Completo<br><input type="text" placeholder="Fulano" class="cadastro"></p>
+                        <p>Email<br><input type="text" placeholder="Fulano" class="cadastro"></p>
+                        <div class="col-sm-6 col-md-4 col-lg-5">
+                            <p>Aniversário<br><input type="text" class="cadastro2"></p>
+                            <p>Estado<br>
+                                <select class="cadastro2">
+                                    <option selected>UF</option>
+                                    <option value="1">Minas Gerais</option>
+                                    <option value="2">São Paulo</option>
+                                </select></p>
+                            <p>Cidade<br>
+                                <select class="cadastro2">
+                                    <option selected>Município</option>
+                                    <option value="1">Belo Horizonte</option>
+                                    <option value="2">Contagem</option>
+                            </select></p>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-sm-6 col-md-8 col-lg-7">
                             <p>Ocupação<br>
-                                <select>
-                                    <option selected>Categoria: Todos</option>
-                                    <option value="1">Aventura</option>
-                                    <option value="2">Romance</option>
-                                    <option value="3">Comédia</option>
-                                </select>
-                            </p>
+                            <select class="cadastro3">
+                                <option value="1">Estudante</option>
+                                <option value="2">Desenvolvedor</option>
+                            </select></p>
+                            <p>Gênero<br>
+                                <select class="cadastro3">
+                                    <option value="1">Feminino</option>
+                                    <option value="2">Masculino</option>
+                                    <option value="3">Prefiro não informar</option>
+                            </select></p>
+                        </div></div>
+                        <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;padding-top: 15px;">
+                            <a href="index_aluno.html"><button class="botao">Criar</button></a>
                         </div>
                     </div>
+                    <div class="col-md-3 col-lg-5"></div>
                 </div>
-                <div class="col-lg-3"></div>
             </div>
-        </div>
+        </main>
 
-        <footer class="footer" style="position: fixed;">
+        <footer class="footer_cadastro">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 footer_area">
                     <div class="row">
@@ -68,7 +85,6 @@
                 </div>
             </div>
         </footer>
-
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
