--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <h1>Conhecimento na <br>palma da mão</h1>
                             <br><br>
                             <h3>This is the best app for <br>people with apps.</h3><br><br><br>
-                            <a href="cadastro_aluno.html"><button>Cadastro Aluno</button></a><a href=""><button>Cadastro Professor</button></a>
+                            <a href="cadastro_aluno.html"><button>Cadastro Aluno</button></a><a href="cadastro_professor.html"><button>Cadastro Professor</button></a>
                         </div>
                     </div>
                 </div>
