--- a/cadastro_professor.html
+++ b/cadastro_professor.html
@@ -65,7 +65,7 @@
                             </select></p>
                         </div></div>
                         <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;padding-top: 15px;">
-                            <a href="index_aluno.html"><button class="botao">Criar</button></a>
+                            <a href="index_professor.html"><button class="botao">Criar</button></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-lg-5"></div>
