--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <nav class="nav">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 <a class="nav-link" href="index_aluno.html">Aluno</a>
-                                <a class="nav-link" href="index_aluno.html">Professor</a>
+                                <a class="nav-link" href="index_professor.html">Professor</a>
                                 <a class="nav-link" href="#">Avaliações</a>
                             </nav>
                         </div>
