--- a/index_professor.html
+++ b/index_professor.html
@@ -6,21 +6,20 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style_index_aluno.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header class="header">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 header_area">
                     <div class="row">
-                        <div class="col-sm-12 col-md-12 col-lg-3">
-                            <img src="img/logo-placeholder.png" class="logo">
+                        <div class="col-sm-12 col-md-3 col-lg-3">
+                            <a href="index.html"><img src="img/logo-placeholder.png" class="logo"></a>
                         </div>
-                        <div class="col-sm-12 col-md-12 col-lg-9">
+                        <div class="col-sm-12 col-md-9 col-lg-9">
                             <nav class="nav">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                <a class="nav-link" href="cadastro_aluno.html">Lançamentos</a>
-                                <a class="nav-link" href="cadastro_professor.html">Em Destaque</a>
+                                <a class="nav-link" href="index_professor.html">Professor</a>
                                 <a class="nav-link" href="#">Avaliações</a>
                             </nav>
                         </div>
@@ -33,27 +32,72 @@
         <div class="col-lg-12">
             <div class="row">
                 <!- Sidebar -!>
-                <div class="col-lg-2">
+                <div class="col-sm-2 col-md-3 col-lg-2">
                     <div class="row">
                         <nav class="nav flex-column menu">
-                            <a class="nav-link active" aria-current="page" href="#">Active</a>
-                            <a class="nav-link" href="#">Link</a>
-                            <a class="nav-link" href="#">Link</a>
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="#">Jornada de Aprendizado</a>
+                            <a class="nav-link" href="#">Explorar</a>
+                            <a class="nav-link" href="#">Perfil</a>
+                            <a class="nav-link" href="#">Sobre</a>
                         </nav>
                     </div>
                 </div>
                 <!-  -!>
-                <div class="col-lg-10">
+                <div class="col-sm-10 col-md-9 col-lg-10">
                     <div class="row">
+                        <main class="main_aluno">
+                            <div class="row">
+                                <div class="col-sm-6 col-md-12 col-lg-6">
+                                    <img src="img/img_placeholder.jpg" class="img">
+                                </div>
+                                <div class="col-sm-6 col-md-12 col-lg-6">
+                                    <h1>Bem Vindo!</h1>
+                                    <br><br><br>
+                                    <h3>This is the best app for <br>people with apps.</h3><br><br><br><br>
+                                    <a href=""><button>Tour pelo site</button></a><a href=""><button>Começar a aprender</button></a>
+                                </div>
+                            </div>
+                        </main>
                         <main>
                             <div class="row">
-                                <div class="col-lg-5">
-                                    <img src="img/img_placeholder.jpg" alt="">
+                                <div class="col-sm-10 col-md-12 col-lg-10 destaques">
+                                    <div class="row">
+                                        <h3>Destaques</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        <div class="col-md-4 col-lg-4">
+                                            <img src="img/icone_placeholder.jpg" alt="">
+                                            <h5>List item</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        </div>
+                                        <div class="col-md-4 col-lg-4">
+                                            <img src="img/icone_placeholder.jpg" alt="">
+                                            <h5>List item</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        </div>
+                                        <div class="col-md-4 col-lg-4">
+                                            <img src="img/icone_placeholder.jpg" alt="">
+                                            <h5>List item</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        </div>
+                                        <div class="col-md-4 col-lg-4">
+                                            <img src="img/icone_placeholder.jpg" alt="">
+                                            <h5>List item</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        </div>
+                                        <div class="col-md-4 col-lg-4">
+                                            <img src="img/icone_placeholder.jpg" alt="">
+                                            <h5>List item</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        </div>
+                                        <div class="col-md-4 col-lg-4">
+                                            <img src="img/icone_placeholder.jpg" alt="">
+                                            <h5>List item</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-lg-7">
-                                    <h3>Bem Vindo!</h3>
-                                </div>
+                                <div class="col-lg-2"></div>
                             </div>
                         </main>
                     </div>
