--- a/cadastro_aluno.html
+++ b/cadastro_aluno.html
@@ -34,39 +34,41 @@
                 <div class="col-sm-12 col-md-6 col-lg-2">
                     <div class="row">
                         <h3  style="padding-bottom: 15px;">Criar Conta de Aluno</h3>
-                        <p>Nome Completo<br><input type="text" placeholder="Fulano" class="cadastro"></p>
-                        <p>Email<br><input type="text" placeholder="Fulano" class="cadastro"></p>
-                        <div class="col-sm-6 col-md-4 col-lg-5">
-                            <p>Aniversário<br><input type="text" class="cadastro2"></p>
-                            <p>Estado<br>
-                                <select class="cadastro2">
-                                    <option selected>UF</option>
-                                    <option value="1">Minas Gerais</option>
-                                    <option value="2">São Paulo</option>
+                        <form method="post" action="" id="cadastro"></form>
+                            <p>Nome Completo<br><input type="text" placeholder="Fulano" class="cadastro"></p>
+                            <p>Email<br><input type="text" placeholder="Fulano" class="cadastro"></p>
+                            <div class="col-sm-6 col-md-4 col-lg-5">
+                                <p>Aniversário<br><input type="text" class="cadastro2"></p>
+                                <p>Estado<br>
+                                    <select class="cadastro2">
+                                        <option selected>UF</option>
+                                        <option value="1">Minas Gerais</option>
+                                        <option value="2">São Paulo</option>
+                                    </select></p>
+                                <p>Cidade<br>
+                                    <select class="cadastro2">
+                                        <option selected>Município</option>
+                                        <option value="1">Belo Horizonte</option>
+                                        <option value="2">Contagem</option>
                                 </select></p>
-                            <p>Cidade<br>
-                                <select class="cadastro2">
-                                    <option selected>Município</option>
-                                    <option value="1">Belo Horizonte</option>
-                                    <option value="2">Contagem</option>
-                            </select></p>
-                        </div>
-                        <div class="col-sm-6 col-md-8 col-lg-7">
-                            <p>Ocupação<br>
-                            <select class="cadastro3">
-                                <option value="1">Estudante</option>
-                                <option value="2">Desenvolvedor</option>
-                            </select></p>
-                            <p>Gênero<br>
+                            </div>
+                            <div class="col-sm-6 col-md-8 col-lg-7">
+                                <p>Ocupação<br>
                                 <select class="cadastro3">
-                                    <option value="1">Feminino</option>
-                                    <option value="2">Masculino</option>
-                                    <option value="3">Prefiro não informar</option>
-                            </select></p>
-                        </div></div>
-                        <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;padding-top: 15px;">
-                            <a href="index_aluno.html"><button class="botao">Criar</button></a>
-                        </div>
+                                    <option value="1">Estudante</option>
+                                    <option value="2">Desenvolvedor</option>
+                                </select></p>
+                                <p>Gênero<br>
+                                    <select class="cadastro3">
+                                        <option value="1">Feminino</option>
+                                        <option value="2">Masculino</option>
+                                        <option value="3">Prefiro não informar</option>
+                                </select></p>
+                            </div></div>
+                            <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;padding-top: 15px;">
+                                <a href="index_aluno.html"><button class="botao">Criar</button></a>
+                            </div>
+                        </form>
                     </div>
                     <div class="col-md-3 col-lg-5"></div>
                 </div>
