--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 <a class="nav-link" href="index_aluno.html">Aluno</a>
                                 <a class="nav-link" href="index_professor.html">Professor</a>
-                                <a class="nav-link" href="#">Avaliações</a>
+                                <a class="nav-link" href="cursos.html">Cursos</a>
                             </nav>
                         </div>
                     </div>
