--- a/favoritos.html
+++ b/favoritos.html
@@ -22,7 +22,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 <a class="nav-link" href="index_aluno.html">Aluno</a>
                                 <a class="nav-link" href="index_professor.html">Professor</a>
-                                <a class="nav-link" href="favoritos.html">Favoritos</a>
+                                <a class="nav-link" href="cursos.html">Cursos</a>
                             </nav>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 main_area">
-                    <table id="cursos">
+                    <table id="favoritos">
 
                     </table>
                 </div>
@@ -43,7 +43,7 @@
         </div>
         
         
-        <script src="js/cursos.js"></script>
+        <script src="js/favoritos.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
